--- a/roles/ansible-cobbler/tasks/main.yml
+++ b/roles/ansible-cobbler/tasks/main.yml
@@ -99,27 +99,28 @@
 # firewalld
 # ---------
 - name: check if firewalld is installed
-  sudo: yes
+  become: yes
   command: which firewalld
   register: firewalld
   changed_when: false
   ignore_errors: true
+  when: ansible_pkg_mgr == 'yum'
 
 - name: check if firewalld service is running
-  sudo: yes
+  become: yes
   command: firewall-cmd --state
   register: firewalld_svc
   ignore_errors: true
   when: firewalld|success
 
 - name: enable cobbler tftpd through firewalld
-  sudo: yes
+  become: yes
   firewalld: service=tftp permanent=true state=enabled
   notify: restart firewalld
   when: firewalld|success and firewalld_svc.stdout=='running'
 
 - name: enable cobbler httpd through firewalld
-  sudo: yes
+  become: yes
   firewalld: service=http permanent=true state=enabled
   notify: restart firewalld
   when: firewalld|success and firewalld_svc.stdout=='running'
@@ -128,21 +129,22 @@
 # ufw
 # ---
 - name: check if ufw is installed
-  sudo: yes
+  become: yes
   command: which ufw
   register: ufw
   changed_when: false
   ignore_errors: true
+  when: ansible_pkg_mgr == 'apt'
 
 - name: allow tftp through ufw
-  sudo: yes
+  become: yes
   ufw: rule=allow port=69 proto=tcp
-  when: ufw|success
+  when: ansible_pkg_mgr == 'apt' and ufw|success
 
 - name: allow http through ufw
-  sudo: yes
+  become: yes
   ufw: rule=allow port=80 proto=tcp
-  when: ufw|success
+  when: ansible_pkg_mgr == 'apt' and ufw|success
 
 # -------
 # Cobbler
@@ -186,7 +188,7 @@
 
 - stat: path=/etc/httpd
   register: httpd_path
-      
+
 - name: start and enable httpd
   service: name=httpd state=started enabled=true
   when: httpd_path.stat.isdir is defined and httpd_path.stat.isdir
@@ -247,10 +249,16 @@
 
 # Attempt to un-mount any previous disto mount points, can occur if previous run failed
 - name: umount isos
-  shell: umount {{ item.path | quote }}
-  with_items: distros
+  mount: name={{ item.path | quote }} src={{ item.file | quote }} fstype=iso9660 state=unmounted
+  with_items: "{{ distros }}"
   when: distros is defined
-  ignore_errors: yes
+#  ignore_errors: yes
+
+#- name: umount isos
+#  shell: umount {{ item.path | quote }}
+#  with_items: "{{ distros }}"
+#  when: distros is defined
+#  ignore_errors: yes
 
 - name: create iso directory to hold distro images
   file: path=~/iso state=directory
@@ -258,12 +266,12 @@
 # Download each defined distro ISO if it doesn't already exist
 - name: download distro iso files
   get_url: url={{ item.url }} dest={{ item.file }}
-  with_items: distros
-  when: distros is defined 
+  with_items: "{{ distros }}"
+  when: distros is defined
 
 # Add the each distro/profile pair only if the distro doesn't already exist
 - name: check distro exists in cobbler
-  with_items: distros
+  with_items: "{{ distros }}"
   shell: "cobbler distro report --name={{ item.name | quote }}-{{ item.arch | quote }} > /dev/null"
   register: distro_result
   ignore_errors: true
@@ -272,34 +280,39 @@
 
 - debug: msg="Distro watch {{ distro_result }}"
 
+- name: copy CentOS 7 kickstart file
+  copy: src="CentOS-7.ks"
+        dest="/var/lib/cobbler/kickstarts/CentOS-7.ks"
+        mode=0644
+
 - name: add distro/profile pairs to cobbler
   shell: >
     (mkdir -p {{ item.path | quote }}
     && mount -t iso9660 -o loop,ro {{ item.file | quote }} {{ item.path | quote }}
     && cobbler import --path={{ item.path | quote }} --name={{ item.name | quote }} --arch={{ item.arch | quote }} {% if item.kickstart is defined %}--kickstart={{ item.kickstart | quote }}{% endif %}
     && umount {{ item.path | quote }})
-  with_items: distros
+  with_items: "{{ distros }}"
   when: distros is defined and distro_result|failed
   notify:
     - restart cobbler
     - wait for cobbler
     - sync cobbler
 
-#- name: check distro for import exists in cobbler
-#  with_items: distro_imports
-#  command: cobbler distro report --name="{{ item.name }}"
-#  register: distro_imports_result
-#  ignore_errors: true
-#  when: distro_imports is defined
+- name: check distro for import exists in cobbler
+  with_items: distro_imports
+  command: cobbler distro report --name="{{ item.name }}"
+  register: distro_imports_result
+  ignore_errors: true
+  when: distro_imports is defined
 
-#- name: import distro to cobbler
-#  shell: cobbler import --name="{{ item.name }}-{{ item.arch }}" --path="{{ item.url }}" --arch="{{ item.arch }}"
-#  with_items: distro_imports
-#  when: distro_imports is defined and distro_imports_result|failed
-#  notify:
-#    - restart cobbler
-#    - wait for cobbler
-#    - sync cobbler
+- name: import distro to cobbler
+  shell: cobbler import --name="{{ item.name }}-{{ item.arch }}" --path="{{ item.url }}" --arch="{{ item.arch }}"
+  with_items: distro_imports
+  when: distro_imports is defined and distro_imports_result|failed
+  notify:
+    - restart cobbler
+    - wait for cobbler
+    - sync cobbler
 
 # ---------------
 # Cobbler Repos
@@ -359,7 +372,7 @@
     {% if item.static is defined %}--static={{ item.static | quote }}{% endif %}
     {% if item.dhcptag is defined %}--dhcp-tag={{ item.dhcptag | quote }}{% endif %}
     {% if item.next_server is defined %}--server {{ item.next_server | quote }}{% endif %}
-  with_items: systems
+  with_items: "{{ systems }}"
   when: systems is defined
   notify:
     - restart cobbler
