--- a/roles/ansible-cobbler/defaults/main.yml
+++ b/roles/ansible-cobbler/defaults/main.yml
@@ -2,27 +2,27 @@
 # Default values suitable for a Vagrant environment
 
 # settings
-# WARNING: The default password is "changeme" fine for demo purposes
+# WARNING: The default password is "pa$$w0rd" fine for demo purposes
 # but should be set to something more secure.
-cobbler_default_password_crypted: $1$0j9R7J3U$qhH8N9oXlytT.pEjjSud60
+cobbler_default_password_crypted: $6$Ew/niBhgNrOSiPtI$.ftWA7iwSmqkaIVhDvmU/2qO.4WzFH86otf57KuqhaGM2xHGXFbAI.7Y4Mv9l1elzX6If7N1vv4acrmNoNshW.
 bound_interface: enp0s8
 
 cobbler_get_loaders: true
 cobbler_signature_update: true
 cobbler_proxy_url_ext:
 # dhcpd
-cobbler_dhcp_listen_interfaces: eth1
+cobbler_dhcp_listen_interfaces: enp0s8
 
 # dhcp.template
 subnets:
   - {
-      cobbler_dhcp_subnet: 10.0.2.0,
+      cobbler_dhcp_subnet: 192.168.168.0,
       cobbler_dhcp_netmask: 255.255.255.0,
-      cobbler_dhcp_option_routers: 10.0.2.2,
-      cobbler_dhcp_option_domain_name_servers: 10.0.2.2,
+      cobbler_dhcp_option_routers: 192.168.168.2,
+      cobbler_dhcp_option_domain_name_servers: 192.168.168.2,
       cobbler_dhcp_option_subnet_mask: 255.255.255.0,
-      cobbler_dhcp_dynamic_bootp_start: 10.0.2.100,
-      cobbler_dhcp_dynamic_bootp_end: 10.0.2.254,
+      cobbler_dhcp_dynamic_bootp_start: 192.168.168.100,
+      cobbler_dhcp_dynamic_bootp_end: 192.168.168.200,
     }
 # ubuntu repo
 cobbler_manage_repo: true
